@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1993-2004 by Alexander V. Lukyanov (lav@yars.free.net)
+ * Copyright (c) 1993-2005 by Alexander V. Lukyanov (lav@yars.free.net)
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -232,7 +232,14 @@ void  ScrollBar(int check)
       return;
 
    for(i=TextWinY; i<TextWinY+TextWinHeight; i++)
-      mvaddch(i,ScrollBarX,ACS_CKBOARD);
+   {
+#if USE_MULTIBYTE_CHARS
+      if(mb_mode)
+	 mvadd_wch(i,ScrollBarX,WACS_CKBOARD);
+      else
+#endif
+	 mvaddch(i,ScrollBarX,ACS_CKBOARD);
+   }
    ScrollBarPos=NewPos;
    mvaddch(NewPos+TextWinY,ScrollBarX,' '|A_REVERSE);
 }
